@@ -22,6 +22,9 @@ Cincom Smalltalk VisualWorks Store Source Control
 CompositeBuilder
 ----------------------
 * Document builder attributes of <composite> builder. Reported by Mark Kefauver and EJ Ciramella.
+* Change composite builder to use same technique as Project to detect build errors (in the build log, the "build" tag has an "error" attribute).
+* Insert composite builder info into build log for each child builder. 
+Todo: Rearranging these elements (even nesting childLog elements?), might allow display of these child buider info elements in reporting apps.
 
 Configuration documentation generation
 ----------------------
